samples/_failures_safe/1761455949_7bec60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c09c6435.c: In function ‘main’:
./samples/SAFE/__tmp_c09c6435.c:150:5: error: expected expression at end of input
  150 |     } else
      |     ^
./samples/SAFE/__tmp_c09c6435.c:150:5: error: expected declaration or statement at end of input
